<resources>
    <string name="app_name">VrikshaGyan</string>
    <string name="app_email">Enter Email</string>
    <string name="app_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here">New here? Signup</string>
    <string name="todo">TODO\n</string>
    <string name="text_signup">Signup</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="province">"   "Province</string>
    <string name="district"> "   " District</string>
    <string name="municipality"> "   "Municipality</string>
    <string name="ward_number">Ward Number</string>
    <string name="tole">Tole</string>
    <string name="occupation">Occupation</string>
    <string name="already_have">Already have an account? Signin</string>
    <string name="btn_continue">Continue</string>
    <string name="login_with_password">Login with Password</string>
    <string name="forgot_password_instruction">Enter your registered email to change your password</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="blank" />
    <string name="btn_confirm">Confirm</string>
    <string name="didnt_get">Did not get OTP?</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_changePassword">Change Password</string>
    <string name="change_password_instruction">Enter your new password</string>
    <string name="info">Info</string>
    <string name="login">Login</string>
    <string name="add">Add</string>
    <string name="options">Options</string>
    <string name="add_plant">Add Plants Details</string>
    <string name="english_name">English Name</string>
    <string name="nepali_name">Nepali Name</string>
    <string name="tharu_name">Tharu Name</string>
    <string name="local_name">Local Name</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="category"> "  " Category</string>
    <string name="part_used">Part Used</string>
    <string name="normal_uses">Normal Uses</string>
    <string name="taditional_uses">Traditional Uses</string>
    <string name="medical_uses">Medical Uses</string>
    <string name="preparation_type">Preparation Type</string>
    <string name="hight">Plant Height</string>
    <string name="plant_description">Plant Description</string>
    <string name="add_images">Add Images</string>
    <string name="save">Save</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_input">Image Input</string>
    <string name="traditional_uses">Traditional Uses</string>
    <string name="select_images">Select Images</string>
    <string name="Save">Save</string>


    <string name="error_first_name_required">First name is required</string>
    <string name="error_last_name_required">Last name is required</string>
    <string name="error_phone_required">Phone number is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_ward_required">Ward number is required</string>
    <string name="error_toile_required">Tole is required</string>
    <string name="error_province_required">Province is required</string>
    <string name="error_district_required">District is required</string>
    <string name="error_municipality_required">Municipality is required</string>
    <string name="timer_initial_text">The OTP will expior on</string>
    <string name="password_strength">Password Strength</string>
    <string name="error_tole_required">Tole is required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="profile">Profile Picture</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_uses">Plant Uses</string>
    <string name="plants_will_appear_here">Plants will appear here</string>
    <string name="plant_image">Plant Image</string>
    <string name="traditional_use">Traditional Uses</string>
    <string name="plat_category">Plant Category</string>
    <string name="update_profile">Update Profile</string>
    <string name="select_image">Select Image</string>
    <string name="log_out">Log out</string>
    <string name="profile_image">Profile Image</string>
    <string name="review">Write a review</string>
    <string name="choose_image">Choose Image</string>
    <string-array name="spinner_items">
        <item>Herb</item>
        <item>Shrub</item>
        <item>Tree</item>
        <item>Vine</item>
        <item>Fern</item>
        <item>Grass</item>
    </string-array>
</resources>