<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/forgotPassLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <!-- App Icon -->
        <ImageView
            style="@style/CustomLogo" />

        <!-- Instructional Text -->
        <TextView
           style="@style/CustomTextViewHeader"
            android:text="@string/forgot_password_instruction"
          />

        <!-- Email TextInputLayout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/app_email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:gravity="left"
                style="@style/CustomTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColorHighlight="@color/red_500"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Continue Button -->
        <Button
            android:id="@+id/btnContinue"
            style="@style/CustomButton"
            android:text="@string/btn_continue"
          />

        <!-- Login TextView -->
        <TextView
            android:id="@+id/txtLogin"
           style="@style/CustomTextView"
            android:text="@string/login_with_password"
            android:gravity="center"
            />

    </LinearLayout>

</RelativeLayout>

