<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"

    android:src="@drawable/ic_profile"
    android:background="@drawable/rounded_image_button"
    android:elevation="4dp"
    android:gravity="center_vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgHome"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_home_24"
            android:contentDescription="@string/app_name"
            android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/plus"
            android:background="@drawable/rounded_image_button"
            android:contentDescription="@string/add_plant"
            android:scaleType="centerInside"
            android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/btnProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/error_image"
            android:background="@drawable/rounded_image_button"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"
            android:padding="10dp"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>
