<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/forgotPassLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
     >

        <!-- App Icon -->
        <ImageView
            style="@style/CustomLogo" />

        <!-- Instructional Text -->
        <TextView
           style="@style/CustomTextViewHeader"
            android:text="@string/change_password_instruction"
            />

        <!-- Email TextInputLayout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/new_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:gravity="left"
                style="@style/CustomTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:lines="1"
                android:singleLine="true"
                android:textColorHighlight="@color/red_500"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtConfirmPassword"
                android:gravity="left"
                android:maxLength="20"
                android:lines="1"
                style="@style/CustomTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColorHighlight="@color/red_500"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Password Strength Meter -->




            <TextView
                android:id="@+id/passwordStrengthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="5dp"
                android:text="@string/password_strength"
                android:textColor="@color/colorAccent" />


        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="9dp"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded">

            <!-- Actual ImageButton with smaller size -->
            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="10pt"
                android:layout_height="10pt"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/info"
                android:src="@drawable/icon_info"
                tools:ignore="TouchTargetSizeCheck" />

        </FrameLayout>


        <!-- Continue Button -->
        <Button
            android:id="@+id/btnChangePassword"
            style="@style/CustomButton"
            android:text="@string/btn_changePassword"
            android:layout_marginTop="0dp"
            />

        <!-- Login TextView -->

    </LinearLayout>
</RelativeLayout>

