<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="15dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/ic_profile"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/btn_choose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/choose_image"
                android:padding="16dp"
                android:src="@drawable/ic_add_photo"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnUpdateProfile"
                style="@style/CustomButton"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:text="@string/update_profile"
                tools:ignore="VisualLintButtonSize,TextSizeCheck" />

            <Button
                android:id="@+id/btnLogOut"
                style="@style/CustomButton"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:text="@string/log_out"
                tools:ignore="VisualLintButtonSize,TextSizeCheck" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragment_container1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/app_background"
        android:elevation="4dp" />

</LinearLayout>
